--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@google/genai": "^1.16.0",
     "react-dom": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "@supabase/supabase-js": "^2.45.0"
+    "@supabase/supabase-js": "2.45.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
