feat: Brand application and update dependencies
Refactors the application to use the new "Graphynovus | Gemini Project Board" branding across all relevant files. Updates the application name in `package.json`, `index.html` title, and `metadata.json`.

Also addresses API key handling by initializing `GoogleGenAI` directly using `process.env.API_KEY`, removing the previous `config.ts` dependency and associated error message.

Introduces an `AppLogo` component and updates the favicon to use the new branding. Adjusts z-index in `KanbanBoard.tsx` for improved layer stacking.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gemini-project-board",
+  "name": "graphynovus-|-gemini-project-board",
   "private": true,
   "version": "0.0.0",
   "type": "module",
