--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "@google/genai": "^1.16.0",
-    "react-dom": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "@supabase/supabase-js": "2.45.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-beautiful-dnd": "13.1.1",
+    "@supabase/supabase-js": "2.45.0",
+    "@google/genai": "1.16.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
